k8s/services/stirling-pdf/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
