k8s/services/stirling-pdf/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - pdf.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: stirling-pdf
          port: 80
