k8s/services/stirling-pdf/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
    - host: pdf.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  name: http
  tls:
    - hosts:
        - pdf.lama-corp.space
      secretName: stirling-pdf-tls
